[package]
name = "yt-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
enable-ansi-support = "0.2.1"
ffpb = "0.1.1"
image = "0.24.6"
metadata = "0.1.8"
rayon = "1.7.0"
spin_sleep = "1.1.1"
term_size = "0.3.2"
tqdm = "0.5.1"
